--- a/view/frontend/templates/success.phtml
+++ b/view/frontend/templates/success.phtml
@@ -1,7 +1,7 @@
 <?php
 /** @var \Addi\Payment\Block\Addi $block */
 $order = $block->getOrder();
-if($order && $order->getAddiUrl()){
-    return $block->_http->setRedirect($order->getAddiUrl());
+if ($order && $order->getAddiUrl()) {
+    return $block->http->setRedirect($order->getAddiUrl());
 }
-?>
+
