css adjust styles, fix payment title

--- a/view/frontend/templates/Checkout/BR/bnpl.phtml
+++ b/view/frontend/templates/Checkout/BR/bnpl.phtml
@@ -1,23 +1,26 @@
-<div class="addi-container">
-    <div class="header">Após clicar em “placer order”, você será redirecionado para Addi.</div>
+<div class="container-addi-principal">
+    <div class="addi-container">
+        <div class="header-addi">Após clicar em “placer order”, você será redirecionado para Addi.</div>
 
-    <div class="logo-container">
-        <div class="logo"><img src="<?php echo $this->getViewFileUrl('Addi_Payment::images/addi-logo.png'); ?>" alt="">
+        <div class="logo-container">
+            <div class="logo"><img src="<?php echo $this->getViewFileUrl('Addi_Payment::images/addi-logo.png'); ?>" alt="">
+            </div>
+
+             <div class="payment-latter">
+                <b>Pague com PIX e adiante sua vida!</b>
+            </div>
         </div>
 
-         <div class="payment-latter">
-            <b>Pague com PIX e adiante sua vida!</b>
+        <div class="description-addi">
+            <div class="description">
+                Com <b>Addi</b> você parcela suas compras em 1 + 3x no <b>PIX, sem juros!*</b><br>
+                Você só precisa do Pix e seu WhatsApp
+            </div>
         </div>
-    </div>
 
-    <div class="description-addi">
-        <div class="description">
-            Com <b>Addi</b> você parcela suas compras em 1 + 3x no <b>PIX, sem juros!*</b><br>
-            Você só precisa do Pix e seu WhatsApp
+        <div class="cpf">
+            *O pagamento precisa ter o mesmo CPF da compra
         </div>
-    </div>
-
-    <div class="cpf">
-        *O pagamento precisa ter o mesmo CPF da compra
     </div>
 </div>
+
