--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -37,6 +37,11 @@
     margin-top: 10px;
 }
 
+.container-addi-principal{
+    width: 100%;
+    float: left;
+}
+
 .addi-container{
     float: left;
     border: 1px solid #a3a3a3a3;
@@ -48,7 +53,7 @@
     background-size: cover;
     background-position: bottom;
 }
-.addi-container .header{
+.addi-container .header-addi{
     background: #0a1b41;
     color: #ffffff;
     padding: 10px;
