Updated the checkout template for CO

--- a/view/frontend/templates/Checkout/CO/default.phtml
+++ b/view/frontend/templates/Checkout/CO/default.phtml
@@ -1,6 +1,6 @@
 <div class="container-addi-principal">
     <div class="addi-container">
-        <div class="header-addi">Después de hacer clic en "Place order" será redirigido a Addi.</div>
+        <div class="header-addi">Después de hacer clic en "Realizar pedido" será redirigido a Addi.</div>
 
         <div class="logo-container">
             <div class="logo"><img src="<?php echo $this->getViewFileUrl('Addi_Payment::images/addi-logo.png'); ?>" alt="">
