Updated the design

--- a/view/frontend/templates/Checkout/CO/default.phtml
+++ b/view/frontend/templates/Checkout/CO/default.phtml
@@ -1,21 +1,14 @@
 <div class="container-addi-principal">
-    <div class="addi-container">
-        <div class="header-addi">Después de hacer clic en "Realizar pedido" será redirigido a Addi.</div>
-
-        <div class="logo-container">
-            <div class="logo"><img src="<?php echo $this->getViewFileUrl('Addi_Payment::images/addi-logo.png'); ?>" alt="">
-            </div>
-            <div class="payment-latter">
-                <b>Compra ahora paga después</b>
-            </div>
-        </div>
-
-        <div class="simple">Es fácil, rápido y seguro</div>
+    <div class="addi-container-flex">
+        <div class="simple">Tú decides a cuántas cuotas comprar</div>
 
         <div class="description-addi">
-            <div class="description">Sin tarjetas de crédito y en minutos</div>
-            <div class="description">Solo necesitas tu cédula y WhatsApp para aplicar</div>
-            <div class="description">Proceso 100% online y sin papeleo</div>
+            <div class="description"><p><img src="<?php echo $this->getViewFileUrl('Addi_Payment::images/icons01.svg'); ?>" alt="">Escoge entre <b>1 y 3 cuotas </b>con 0% de interés.</p></div>
+            <div class="description"><p><img src="<?php echo $this->getViewFileUrl('Addi_Payment::images/icons04.svg'); ?>" alt="">Elige entre <b>4 y 6 cuotas </b>con intereses.</p></div>
+            <div class="description"><p><img src="<?php echo $this->getViewFileUrl('Addi_Payment::images/icons02.svg'); ?>" alt="">Solo necesitas <b>tu cédula y WhatsApp</b> para comprar</p></div>
+            <div class="description-subtitle">*La opción de 0% está sujeta a criterios de elegibilidad y <a target="_blank" href="https://co.addi.com/terminos-y-condiciones">T&C</a> de Addi.</div>
+            <div class="description">Haz clic en <b>"Realizar pedido"</b> para continuar.</div>
         </div>
     </div>
 </div>
+
